| Summary: | ASTERISK-28914: res_http_websocket: Client doesn't use mask | ||||
| Reporter: | Nickolay V. Shmyrev (nshmyrev) | Labels: | patch | ||
| Date Opened: | 2020-05-23 03:31:40 | Date Closed: | 2020-06-15 13:54:45 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_http_websocket | ||
| Versions: | GIT | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) asterisk-websocket-fix.diff | |||
| Description: | According to websocket protocol specification https://tools.ietf.org/html/rfc6455#section-5.1 websocket clients MUST use masking when sending data. However, current code doesn't use mask and thus can't work with some websocket servers (websockets python library for example).
https://github.com/asterisk/asterisk/blob/master/res/res_http_websocket.c#L382 At least dummy mask would be nice to have. See also https://stackoverflow.com/questions/33250207/why-are-websockets-masked | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2020-05-23 03:31:43.922-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Nickolay V. Shmyrev (nshmyrev) 2020-05-23 13:56:20.269-0500 The following patch should fix the problem. I'm not yet approved on Gerrit to submit it. By: Joshua C. Colp (jcolp) 2020-05-27 03:41:10.851-0500 Until license is accepted even attached patches are not visible. I'm setting this to feedback until your license is dealt with, after which you can upload the patch and post it to Gerrit if you wish. By: Nickolay V. Shmyrev (nshmyrev) 2020-06-02 18:30:31.741-0500 Submitted to Gerrit: https://gerrit.asterisk.org/c/asterisk/+/14453 By: Nickolay V. Shmyrev (nshmyrev) 2020-06-15 13:54:45.883-0500 Same as ASTERISK-28949 | ||||