Fix for asterisk websocket issues. See also

https://issues.asterisk.org/jira/browse/ASTERISK-28914